@@ -1,3 +1,5 @@
+2005/10/28 -- released version 20051028_trunk
+
 2005/10/27 -- released version 20051027_trunk
 
 2005/10/26 -- released version 20051026_trunk
